--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
     </div>
 
     <div class="footer">
-      🌞 Ngapain yang susah kalau bisa yang gampang?<br>
-      💧 Percayain baju-baju sayangmu ke <strong>Cyaa</strong> aja yaa~<br>
+      💧 Percayain baju-baju sayangmu ke <strong>Cyaa</strong> ajaa<br>
       🧺 Bersih, Simpel, Murah lagi #KantongAnakRantau
     </div>
   </div>
