--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="footer">
       💧 Percayain baju-baju sayangmu ke <strong>Cyaa</strong> ajaa<br>
       🧺 Bersih, Simpel, Murah lagi #KantongAnakRantau<br>
-      ⚖️ *Maksimal 7 kg per sekali cuci yaa!*
+      ⚖️ Maksimal 7 kg per sekali cuci yaa!
     </div>
   </div>
 </body>
