--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
     <div class="footer">
       💧 Percayain baju-baju sayangmu ke <strong>Cyaa</strong> ajaa<br>
       🧺 Bersih, Simpel, Murah lagi<br>
-      ⚖️ Maksimal 7 kg per sekali cuci yaa!
+      ⚖️ Maksimal 6 kg per sekali cuci yaa!<br>
+      ➕ Tambahan (opsional):<br>
+          - Deterjen biasa: +1.000<br>
+          - Deterjen laundry: +2.000<br>
+          - Softener: +1.000
     </div>
   </div>
 </body>
