--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     </div>
 
     <div class="paket">
-      <img src="https://cdn-icons-png.flaticon.com/512/1199/1199124.png" alt="Pascal" />
-      <div class="paket-text"><span class="paket-title">Paket Pascal:</span> Nyuci + Pengering = 15.000</div>
+      <img src="https://cdn-icons-png.flaticon.com/512/1199/1199124.png" alt="Java Script" />
+      <div class="paket-text"><span class="paket-title">Paket Java script:</span> Nyuci + Pengering = 15.000</div>
     </div>
 
     <div class="paket">
